--- a/src/main/java/Interface/Login.form
+++ b/src/main/java/Interface/Login.form
@@ -80,7 +80,7 @@
                       <Component id="user" alignment="3" min="-2" pref="44" max="-2" attributes="0"/>
                       <Component id="jLabel1" alignment="3" min="-2" pref="44" max="-2" attributes="0"/>
                   </Group>
-                  <EmptySpace min="-2" pref="49" max="-2" attributes="0"/>
+                  <EmptySpace min="-2" pref="34" max="-2" attributes="0"/>
                   <Group type="103" groupAlignment="3" attributes="0">
                       <Component id="jLabel2" alignment="3" min="-2" pref="44" max="-2" attributes="0"/>
                       <Component id="password" alignment="3" min="-2" pref="44" max="-2" attributes="0"/>
@@ -102,6 +102,9 @@
           </Properties>
         </Component>
         <Component class="javax.swing.JTextField" name="user">
+          <Properties>
+            <Property name="text" type="java.lang.String" value="administrator"/>
+          </Properties>
         </Component>
         <Component class="javax.swing.JLabel" name="jLabel1">
           <Properties>
